--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
  <meta charset="UTF-8">
 
-
+<meta http-equiv="Access-Control-Allow-Origin" content="*" />
  <title>Musical Christmas Lights</title>
  
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
