--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
       document.getElementById("overlay").innerHTML =
       '<div class="text-loading">来啦来啦...</div>';
       const files = [
-      "http://music.163.com/song/media/outer/url?id=1387399326.mp3",
-      "http://music.163.com/song/media/outer/url?id=28832054.mp3",
-      "http://music.163.com/song/media/outer/url?id=1987734598.mp3",
-      "http://music.163.com/song/media/outer/url?id=85571.mp3",
-      "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/ccCommunity/Mark_Smeby/En_attendant_Nol/Mark_Smeby_-_07_-_Jingle_Bell_Swing.mp3"];
+      "https://www.lisihui.icu/风信子の思念.mp3",
+      "https://www.lisihui.icu/你的对的人.mp3",
+      "https://www.lisihui.icu/诀爱.mp3",
+      "https://www.lisihui.icu/我们俩.mp3",
+      "https://www.lisihui.icu/你是落日弥漫的橘 天边透亮的星.mp3"];
       const file = files[i];
  
       const loader = new THREE.AudioLoader();
